Mejoras de funcionalidad y estetica

--- a/cargaCRUD.html
+++ b/cargaCRUD.html
@@ -58,7 +58,7 @@
             <label for="precio"><p>Precio:</p></label>
 
         </div>
-        <button type="submit">Agregar Producto</button>
+        <button class="button-submit" type="submit">Agregar Producto</button>
     </form>
 
     <footer id="idfooter"></footer>
