--- a/cart.html
+++ b/cart.html
@@ -49,8 +49,12 @@
                                 <line x1="5" y1="12" x2="19" y2="12"></line>
                             </svg>
                         </button>
-                        <p>Cantidad: {{obtenerCantidadCarrito(suplemento.codigo)}} </p>
-                        <div class="precio">
+                        <p>Cantidad en carrito: {{obtenerCantidadCarrito(suplemento.codigo)}} </p>
+                        <div v-if="obtenerCantidadCarrito(suplemento.codigo)>0" class="precio">
+                            <h2>${{sumaSuplementos(suplemento.codigo)}}</h2>
+                            <span>Precio p/Uni. ${{suplemento.precio}}</span>
+                        </div>
+                        <div v-if="obtenerCantidadCarrito(suplemento.codigo)==0" class="precio">
                             <h1>${{suplemento.precio}}</h1>
                         </div>
                     </div>
@@ -80,7 +84,7 @@
                 return {
                     suplementos: [],
                     carrito: [],
-                    total: 0,
+                    total: 0,                    
                 }
             },
             mounted() {
@@ -166,11 +170,16 @@
                             alert('Error al restar el suplemento del carrito')
                         })
                 },
-                obtenerCantidadCarrito(codigo) {
+                obtenerCantidadCarrito(codigo){
                     const carritoItem = this.carrito.find(item => item.codigo === codigo)
                     return carritoItem ? carritoItem.cantidad : 0
 
-                },                
+                },
+                sumaSuplementos(codigo){
+                    const carritoItem = this.carrito.find(item => item.codigo === codigo)
+                    return carritoItem ? (carritoItem.precio * carritoItem.cantidad) : 0
+                   
+                }                
             }
         })
         app.mount('body')
