--- a/pseudoCRUD.html
+++ b/pseudoCRUD.html
@@ -16,7 +16,8 @@
     <link rel="stylesheet" href="css/cargaCRUD.css">
     <title>Sanus Vita</title>
     <link rel="icon" type="imcantidad/png" sizes="32x32" href="img/ico.png"">
-    <!-- <link rel=" stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
+    <!-- <link rel=" stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
 </head>
 
 <body class=" dark-theme">
@@ -53,42 +54,73 @@
                                 {{suplemento.precio}}
                             </td>
                             <td class="btns">
-                                <a href="#modal" @click="edit(codigo)"
-                                    class="btn editar"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path></svg></i>
+                                <a href="#modal" @click="edit(codigo)" class="btn editar"><svg
+                                        xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                        fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" class="feather feather-edit">
+                                        <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
+                                        <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
+                                    </svg></i>
                                 </a>
-                                <a href="#!" class="btn delete"
-                                    @click="archive(codigo)"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash-2"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg></i>
+                                <a href="#!" class="btn delete" @click="archive(codigo)"><svg
+                                        xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                        fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" class="feather feather-trash-2">
+                                        <polyline points="3 6 5 6 21 6"></polyline>
+                                        <path
+                                            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2">
+                                        </path>
+                                        <line x1="10" y1="11" x2="10" y2="17"></line>
+                                        <line x1="14" y1="11" x2="14" y2="17"></line>
+                                    </svg></i>
                                 </a>
                             </td>
                         </tr>
-                        <tr>
-                            <td colspan="2">
+                        <tr id="formulario">
+                            <td>
                                 <div class="input-field">
-                                    <input placeholder="Placeholder" ref="nombre" v-model="input.nombre" id="nombre"
+                                    <input placeholder="123" v-model="input.codigo" id="codigo"
+                                        type="text">
+                                    <label for="codigo">Codigo</label>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="input-field">
+                                    <input placeholder="Nombre" ref="nombre" v-model="input.nombre" id="nombre"
                                         type="text">
                                     <label for="nombre">Nombre</label>
                                 </div>
                             </td>
                             <td>
                                 <div class="input-field">
-                                    <input placeholder="Placeholder" v-model="input.descripcion" id="descripcion"
+                                    <input placeholder="Descripción" v-model="input.descripcion" id="descripcion"
                                         type="text">
                                     <label for="descripcion">Descripción</label>
                                 </div>
                             </td>
                             <td>
                                 <div class="input-field">
-                                    <input placeholder="Placeholder" v-model="input.cantidad" id="cantidad" type="text">
+                                    <input placeholder="Cantidad" v-model="input.cantidad" id="cantidad" type="text">
                                     <label for="cantidad">Cantidad</label>
                                 </div>
                             </td>
                             <td>
                                 <div class="input-field">
-                                    <input placeholder="Placeholder" v-model="input.precio" id="precio" type="text">
+                                    <input placeholder="Precio" v-model="input.precio" id="precio" type="text">
                                     <label for="precio">Precio</label>
                                 </div>
                             </td>
-                            <td><a href="#!" @click="add" class="btn add"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line>add</svg></a></td>
+                            <td>
+                                <button type="submit" class="btn add">
+                                    <svg xmlns="http://www.w3.org/2000/svg"
+                                        width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                        class="feather feather-plus">
+                                        <line x1="12" y1="5" x2="12" y2="19"></line>
+                                        <line x1="5" y1="12" x2="19" y2="12"></line>add
+                                    </svg>
+                                </button>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
@@ -122,10 +154,8 @@
                                     class="btn waves-effect waves-light blue darken-2"><i
                                         class="material-icons">restore</i>
                                 </a>
-                                <a href="#!" @click="deplete(codigo)"
-                                    class="btn waves-effect waves-light red darken-2"><i
-                                        class="material-icons">delete</i>
-                                </a>
+                                <button @click="eliminarSuplemento(suplemento.codigo)"><i
+                                        class="material-icons">delete</i></button>
                             </td>
                         </tr>
                     </tbody>
@@ -140,7 +170,8 @@
                         <form class="col s12">
                             <div class="row">
                                 <div class="input-field col s6">
-                                    <input placeholder="Nombre del producto" id="last_name" type="text" v-model="editInput.nombre">
+                                    <input placeholder="Nombre del producto" id="last_name" type="text"
+                                        v-model="editInput.nombre">
                                     <label for="last_name">Nombre</label>
                                 </div>
                                 <div class="input-field col s6">
@@ -151,12 +182,12 @@
                             </div>
                             <div class="row">
                                 <div class="input-field col s6">
-                                    <input placeholder="Ingrese cantidad" id="edit_cantidad" type="text" v-model="editInput.cantidad">
+                                    <input placeholder="Ingrese cantidad" id="edit_cantidad" type="text"
+                                        v-model="editInput.cantidad">
                                     <label for="edit_cantidad">Cantidad</label>
                                 </div>
                                 <div class="input-field col s6">
-                                    <input placeholder="$$$" id="edit_precio" type="text"
-                                        v-model="editInput.precio">
+                                    <input placeholder="$$$" id="edit_precio" type="text" v-model="editInput.precio">
                                     <label for="edit_precio">Precio</label>
                                 </div>
                             </div>
@@ -181,10 +212,62 @@
 
     <footer id="idfooter">
     </footer>
+    <script defer src=" js/darkMode.js"></script>
+    <script defer src="js/header.js"></script>
     <script src="js/index.js"></script>
+    <script src="js/form.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <script>
         const URL = "https://evannj.pythonanywhere.com/";
+        
+        document.getElementById('formulario').addEventListener('submit',
+
+            function (event) {
+                event.preventDefault() // Evitamos que se recargue la página
+                // Obtenemos los valores del formulario
+                var codigo = document.getElementById('codigo').value
+                var nombre = document.getElementById('nombre').value
+                var descripcion = document.getElementById('descripcion').value
+                var cantidad = document.getElementById('cantidad').value
+                var precio = document.getElementById('precio').value
+                // Creamos un objeto con los datos del producto
+                var suplemento = {
+                    codigo: codigo,
+                    nombre: nombre,
+                    descripcion: descripcion,
+                    cantidad: cantidad,
+                    precio: precio
+                }
+                console.log(suplemento)
+                // Realizamos la solicitud POST al servidor
+                fetch(URL + 'suplementos', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(suplemento)
+                })
+                    .then(function (response) {
+                        if (response.ok) {
+                            return response.json() // Parseamos la respuesta JSON
+                        } else {
+                            throw new Error('Error al agregar el suplemento.')
+                        }
+                    })
+                    .then(function (data) {
+                        alert('Producto agregado correctamente.')
+                        document.getElementById('codigo').value = ""
+                        document.getElementById('nombre').value = ""
+                        document.getElementById('descripcion').value = ""
+                        document.getElementById('cantidad').value = ""
+                        document.getElementById('precio').value = ""
+                    })
+                    .catch(function (error) {
+                        console.log('Error:', error)
+                        alert('Error al agregar el producto.')
+                    })
+            })
+
         new Vue({
             el: '#app',
             data: {
@@ -192,10 +275,10 @@
                 suplementos: [],
                 bin: [],
                 input: {
-                    nombre: "Vitaminas",
-                    descripcion: "lorem",
-                    cantidad: 10,
-                    precio: "$$$",
+                    nombre: "",
+                    descripcion: "",
+                    cantidad: "",
+                    precio: "",
                 },
                 editInput: {
                     nombre: "",
@@ -208,14 +291,15 @@
                 this.obtenerSuplementos();
             },
             methods: {
-                obtenerSuplementos() {                    
+                obtenerSuplementos() {
                     fetch(URL + 'suplementos')
                         .then(response => {
                             if (response.ok) {
                                 return response.json()
                             } else {
-                                throw new Error('Error al obtener los suplementos.')}
-                            })
+                                throw new Error('Error al obtener los suplementos.')
+                            }
+                        })
                         .then(data => {
                             this.suplementos = data
                         })
@@ -271,10 +355,62 @@
                     }
                     this.suplementos.sort(ordonner);
                 },
-                //function to defintely delete data 
-                deplete: function (codigo) {
-                    // console.log(this.bin[codigo]);
-                    this.bin.splice(codigo, 1);
+                obtenerlista() {
+                    fetch(URL + 'suplementos')
+                        .then(response => response.json())
+                        .then(data => {
+                            this.codigosSuplementos = data.map(suplemento => suplemento.codigo)
+
+                        })
+                        .catch(error => {
+                            alert('Error al obtener la lista de codigos.')
+                        })
+                },
+                guardarCambios() {
+                    const suplemento = {
+                        codigo: this.codigo,
+                        nombre: this.nombre,
+                        descripcion: this.descripcion,
+                        cantidad: this.cantidad,
+                        precio: this.precio
+                    }
+
+                    fetch(URL + 'suplementos/' + this.codigo, {
+                        method: 'PUT',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify(suplemento)
+                    })
+                        .then(response => {
+                            if (response.ok) {
+                                return response.json()
+                            } else {
+                                throw new Error('Error al guardar los cambios del suplemento.')
+                            }
+                        })
+                        .then(data => {
+                            alert('Cambios guardados correctamente.')
+                            location.reload()
+                        })
+                        .catch(error => {
+                            alert('Error al guardar los cambios del suplemento.')
+                        })
+                },
+                eliminarSuplemento(codigo) {
+                    const URL = "https://evannj.pythonanywhere.com/"
+                    fetch(URL + `suplementos/${codigo}`, { method: 'DELETE' })
+                        .then(response => {
+                            if (response.ok) {
+                                // Eliminar el producto de la lista después de eliminarlo en el servidor
+                                this.suplementos = this.suplementos.filter(suplemento => suplemento.codigo !== codigo)
+                                console.log('Suplemento eliminado correctamente.')
+                            }
+                        })
+                        .catch(error => {
+                            console.log('Error:', error)
+                            alert('Error al eliminar el suplemento.')
+                        })
                 }
             }
         });
@@ -284,10 +420,7 @@
             return (a.nombre > b.nombre);
         };
 
-        $(function () {
-            //initialize modal box with jquery
-            $('.modal').modal();
-        });
+        
     </script>
 
 </body>
