--- a/eliminarCRUD.html
+++ b/eliminarCRUD.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/lightDark.css">
     <!-- <link rel="stylesheet" href="css/cart.css"> -->
     <link rel="stylesheet" href="css/tienda.css">
+    <link rel="stylesheet" href="css/formulario.css">
     <title>Sanus Vita</title>
     <link rel="icon" type="image/png" sizes="32x32" href="img/ico.png"">
 </head>
@@ -40,7 +41,7 @@
                 <td><p>{{suplemento.descripcion}}</p></td>
                 <td align="right"><p>{{suplemento.cantidad}}</p></td>
                 <td align="right"><p>{{suplemento.precio}}</p></td>
-                <td><button @click="eliminarSuplemento(suplemento.codigo)">Eliminar</button></td>
+                <td><button class="button-submit" @click="eliminarSuplemento(suplemento.codigo)">Eliminar</button></td>
             </tr>
         </tbody>
     </table>
